# pyro-mysql

./: .gitignore  .pre-commit-config.yaml  BENCHMARK.md  CHANGELOG.md  Cargo.toml  README.md  TEST_README.md  cliff.toml  deny.toml  justfile  make_doc.py  pyproject.toml  pyro_mysql.pyi  shell.nix
.github/: renovate.json
.github/workflows/: cargo-deny.yml  lints.yml  publish.yml  release.yml  security.yml  test.yml
benches/: bench.py  bench.rs  bench_concurrency.py  bench_concurrency.rs  bench_pyro.py  bench_pyro.rs  bench_sqlalchemy.py  bench_sqlalchemy.rs  bench_sqlalchemy_async.py  bench_sqlalchemy_async.rs  connect.py  connect.rs  sqlalchemy.py  sqlalchemy.rs  sqlalchemy_async.py  sqlalchemy_async.rs
book/: book.toml
book/src/: SUMMARY.md  api.md  conn.md  intro.md  log.md  perf-tips.md  query.md  tx.md  type.md
docs/: pyro_mysql.html  search.js
docs/pyro_mysql/: async_.html  error.html  sync.html
pyro_mysql/: __init__.pyi  async_.pyi  dbapi.py  dbapi.pyi  dbapi_async.pyi  sqlalchemy.py  sqlalchemy_async.py  sqlalchemy_sync.py  sync.pyi
pyro_mysql/testing/: __init__.py  requirements.py
report/: chart.html  chart_sqlalchemy.html
src/: capability_flags.rs  conn.rs  error.rs  from_raw_value.rs  isolation_level.rs  lib.rs  opts.rs  params.rs  py_imports.rs  queryable.rs  row.rs  tokio_thread.rs  transaction.rs  util.rs  value.rs  zero_mysql_util.rs  zero_param.rs  zero_params_adapter.rs
src/async/: conn.rs  dbapi_conn.rs  handler.rs  mod.rs  multi_conn.rs  opts.rs  pool.rs  pool_opts.rs  queryable.rs  row.rs  transaction.rs  wtx_param.rs  wtx_types.rs
src/async/backend/: mod.rs
src/async/backend/wtx/: conn.rs  mod.rs  param.rs  queryable.rs  row.rs
src/async/backend/zero_mysql/: conn.rs  handler.rs  mod.rs  params_adapter.rs
src/dbapi/: async_conn.rs  async_cursor.rs  async_zero_handler.rs  conn.rs  cursor.rs  error.rs  mod.rs  type_constructor.rs  type_object.rs  zero_handler.rs
src/sync/: conn.rs  cursor.rs  dbapi_conn.rs  handler.rs  iterator.rs  mod.rs  multi_conn.rs  opts.rs  pool.rs  pool_opts.rs  pooled_conn.rs  transaction.rs  type_object.rs
src/sync/backend/: mod.rs
src/sync/backend/diesel/: conn.rs  mod.rs  row.rs
src/sync/backend/mysql/: conn.rs  mod.rs
src/sync/backend/zero_mysql/: conn.rs  handler.rs  mod.rs  param.rs  params_adapter.rs
tests/: _test_sync_threads.py  conftest.py  test_async_concurrency.py  test_async_connection.py  test_async_data_types.py  test_async_dbapi.py  test_async_errors.py  test_async_pool.py  test_async_query.py  test_async_sqlalchemy.py  test_async_transaction.py  test_conn_transaction_interaction.py  test_error.py  test_float_rounding.py  test_sync_connection.py  test_sync_data_types.py  test_sync_dbapi.py  test_sync_query.py  test_sync_sqlalchemy.py  test_sync_threads.py  test_sync_transaction.py  test_threadsafety.py  test_tokio_runtime.rs  test_unix_socket.py
