[package]
name = "pyro-mysql"
version = "0.1.8"
edition = "2024"

[lib]
name = "pyro_mysql"
crate-type = ["cdylib", "rlib"]

[dependencies]
chrono = "0.4"
coz = "0.1.3"
criterion = "0.7.0"
diesel = { version = "2.2", features = ["mysql", "chrono"] }
either = "1.15.0"
futures = "0.3.31"
log = "0.4.28"
mysql = "26.0.1"
mysql_async = "0.36.1"
mysql_common = "0.35.5"
mysqlclient-sys = "0.4.7"
parking_lot = { version = "0.12.4", features = ["send_guard"] }
pyo3 = { version = "0.27.1", features = [
  "experimental-async",
  "experimental-inspect",
  "either",
  "auto-initialize",
  "abi3-py310",
] }
pyo3-async-runtimes = { version = "0.27.0", features = ["tokio-runtime"] }
# pyo3-log = "0.13.1"
pyo3-log = { git = "https://github.com/oleflb/pyo3-log.git", rev = "13a516dc494fd73c037b434a66d71ec069574211" }
ryu = "1.0.20"
simdutf8 = "0.1.5"
thiserror = "2.0.16"
tokio = "1.47.1"
tokio-util = { version = "0.7.16", features = ["rt"] }
wtx = { version = "0.38", features = [
  "database",
  "mysql",
  "getrandom",
  "tokio",
] }
zerocopy = { version = "0.8", features = ["derive"] }
zero-mysql = { path = "../zero-mysql", features = ["tokio"] }


[patch.crates-io]
mysql_async = { git = "https://github.com/elbaro/mysql_async.git", rev = "3811ae03b54872248ed183f1968b2dc033c8dcc4" }


[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[profile.release]
lto = true

[profile.profiling]
inherits = "release"
debug = true

[profile.bench]
lto = true

[[bench]]
name = "bench"
harness = false

[[bench]]
name = "sqlalchemy"
harness = false

[[bench]]
name = "sqlalchemy_async"
harness = false

[[bench]]
name = "connect"
harness = false
