[package]
name = "pyro-mysql"
version = "0.2.12"
edition = "2024"

[lib]
name = "pyro_mysql"
crate-type = ["cdylib", "rlib"]

[dependencies]
chrono = "0.4"
criterion = "0.8.0"
either = "1.15.0"
futures = "0.3.31"
log = "0.4.28"
parking_lot = { version = "0.12.4", features = ["send_guard"] }
pyo3 = { version = "0.27.1", features = [
  "experimental-async",
  "experimental-inspect",
  "either",
  "auto-initialize",
  "abi3-py310",
] }
pyo3-async-runtimes = { version = "0.27.0", features = ["tokio-runtime"] }
pyo3-log = "0.13.2"
ryu = "1"
simdutf8 = "0.1"
thiserror = "2"
tokio = "1"
tokio-util = { version = "0.7.16", features = ["rt"] }
zerocopy = { version = "0.8", features = ["derive"] }
zero-mysql = { version = "0.2", features = [
  "sync",
  "sync-tls",
  "tokio",
  "tokio-tls",
] }


[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[profile.release]
lto = true

[profile.profiling]
inherits = "release"
debug = true

[profile.bench]
lto = true

[lints.clippy]
all = { level = "deny", priority = -1 }
alloc_instead_of_core = "warn"
allow_attributes = "warn"
as_pointer_underscore = "warn"
as_underscore = "warn"
assertions_on_result_states = "warn"
cfg_not_test = "warn"
clone_on_ref_ptr = "warn"
cognitive_complexity = "warn"
create_dir = "warn"
dbg_macro = "warn"
decimal_literal_representation = "warn"
default_union_representation = "warn"
disallowed_script_idents = "warn"
doc_include_without_cfg = "warn"
else_if_without_else = "warn"
empty_drop = "warn"
empty_enum_variants_with_brackets = "warn"
empty_structs_with_brackets = "warn"
exit = "warn"
expect_used = "warn"
field_scoped_visibility_modifiers = "warn"
filetype_is_file = "warn"
float_cmp_const = "warn"
fn_to_numeric_cast_any = "warn"
get_unwrap = "warn"
if_then_some_else_none = "warn"
infinite_loop = "warn"
inline_asm_x86_att_syntax = "warn"
inline_asm_x86_intel_syntax = "warn"
integer_division = "warn"
integer_division_remainder_used = "warn"
iter_over_hash_type = "warn"
large_include_file = "warn"
lossy_float_literal = "warn"
map_err_ignore = "warn"
map_with_unused_argument_over_ranges = "warn"
mem_forget = "warn"
missing_asserts_for_indexing = "warn"
mixed_read_write_in_expression = "warn"
multiple_unsafe_ops_per_block = "warn"
mutex_atomic = "warn"
mutex_integer = "warn"
needless_raw_strings = "warn"
non_ascii_literal = "warn"
non_zero_suggestions = "warn"
panic = "warn"
panic_in_result_fn = "warn"
partial_pub_fields = "warn"
pathbuf_init_then_push = "warn"
pointer_format = "warn"
precedence_bits = "warn"
print_stderr = "warn"
print_stdout = "warn"
pub_with_shorthand = "warn"
pub_without_shorthand = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
redundant_test_prefix = "warn"
redundant_type_annotations = "warn"
ref_patterns = "warn"
renamed_function_params = "warn"
rest_pat_in_fully_bound_structs = "warn"
return_and_then = "warn"
self_named_module_files = "warn"
semicolon_inside_block = "warn"
shadow_same = "warn"
string_add = "warn"
string_lit_chars_any = "warn"
string_slice = "warn"
suspicious_xor_used_as_pow = "warn"
tests_outside_test_module = "warn"
todo = "warn"
undocumented_unsafe_blocks = "warn"
unimplemented = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
unnecessary_self_imports = "warn"
unneeded_field_pattern = "warn"
unreachable = "warn"
unused_result_ok = "warn"
unwrap_in_result = "warn"
unwrap_used = "warn"
use_debug = "warn"
verbose_file_reads = "warn"


[[bench]]
name = "bench"
harness = false

[[bench]]
name = "sqlalchemy"
harness = false

[[bench]]
name = "sqlalchemy_async"
harness = false

[[bench]]
name = "connect"
harness = false
